<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Login">



        <FrameLayout
            android:id="@+id/loginframeContainer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#bf4080"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/welcomemsg"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="sans" />
            <EditText
                android:id="@+id/login_emailid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/emailidsymbol"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/emailid"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="16sp"
                android:typeface="sans" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/passwordsymbol"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/userpassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="16sp"
                android:typeface="sans" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="#bf4080"
                android:padding="3dp"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="17sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="#bf4080"
                android:padding="3dp"
                android:text="@string/registeruser"
                android:textColor="#fff"
                android:textSize="17sp"
                android:textStyle="bold"
                android:typeface="sans" />





            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/black" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/black" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="10px"
                android:background="@color/white" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="15px"
                android:background="@color/white" />
        </LinearLayout>
    </RelativeLayout>

